:memo: upload file API 스웨거 업데이트
